<resources>
    <string name="app_name">SmartHome</string>
    <string name="ob_header1">SIMPLE ABROAD CALLS</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

    <string name="demo_content">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit. Vivamus sodales faucibus\n dapibus. Etiam mattis leo quis laoreet dictum.</string>
    <string name="demo_title">Lorem Ipsum</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="led1">LED1</string>
    <string name="nhi_t">Nhiệt độ</string>
    <string name="led2">LED2</string>
    <string name="led3">LED3</string>
    <string name="m">Độ ẩm</string>
    <string name="bedroom">BEDROOM</string>

</resources>
